# eoap-tools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  copyright.txt  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check.yml  docs.yml  release.yml
data/ci/fix/: coverage.xml
data/main/: coverage.xml
docs/: mkdocs.yml
docs/src/: index.md
docs/src/about/: help.md
docs/src/assets/css/: extra.css
docs/src/getting-started/: install.md
docs/src/how-to/: overview.md
docs/src/learn/: cli.md  overview.md
docs/src/tutorials/: overview.md
examples/: sharinghub-download-dataset.cwl  stac-generate-catalog.cwl  stac-prepare-assets.cwl
scripts/: copyright.py  get_latest_release_notes.py  update_latest_tag_msg.sh  watch.py
src/eoap_tools/: __init__.py  __main__.py  _cli.py  sharinghub.py  stac.py  utils.py
tests/: test_cli.py  test_package.py
